sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:21: error: Unmatched closing brace '}' ignored here
}
^