sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var i=0
  val l=getValueCount()
  var v=0
  var m=1
  var k=1
  var gap=l/2
  while (gap>0){
    if (isSmallerThan(i-gap,v)==false){
        copy(i-k*gap,i-(k-1)*gap)
        m=i-gap-1
      }
    k=k+1
    }
   setValue(m,v)
  }
}